--- a/final/index.html
+++ b/final/index.html
@@ -49,7 +49,7 @@
      <input type="image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRAAgdWeyaM5MfK4aUY4pBfQlmfRd5L-m156k9ta4_n_g6vnKEx&usqp=CAU" width="200" height="150">
      <input type="image" src="https://b.ecimg.tw/items/DEAT17A40921338/000001_1518149878.jpg" width="200" height="150">
      <input type="image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSFI6G5vton38vqiMn2ebpXDK7IvbIaZc5Yah5cNs4oRnO_qdap&usqp=CAU" width="200" height="150">
-      <table class="table" border="1" align="left">
+      <table class="table" border="1" align="center">
        <thead style="height: 50">
         <td class="name">Product Name</td>
         <td class="name">Quantity</td>
