--- a/final/index.html
+++ b/final/index.html
@@ -4,103 +4,28 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="index.css" rel="stylesheet" type ="text/css">
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
-<body> 
- <div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#" style="float: left;">Instructions</a> 
-  <a href="#" style="float: left;">Shut down</a>
- </div>
- <div class="dropdown" style="float:right">
-  <button onclick="myFunction()" class="dropbtn">Leave</button>
+<body>
+<div id="mySidenav" class="sidenav">
+<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+<a href="https://chia-yun-chang.github.io/wp108b/1/hw.html" style="float: left;">About</a> 
+<a href="#" style="float: left;">Instructions</a> 
+</div>
+<div class="dropdown" style="float:right">
+<button onclick="myFunction()" class="dropbtn">Leave</button>
     <div id="myDropdown" class="dropdown-content">
-      <a href="#login">Log in</a>
-      <a href="#logout">Log out</a>
+    <a href="#">Log in</a>
+    <a href="#">Log out</a>
     </div>
- </div>
- <span onclick="openNav()">&#9826;</span>
- <script src="./index.js" type="text/javascript"></script>
- <div class="line"></div>
- <div id="sitebody">
-    <div id="sidebar_left">
-     <button class="Bton1">1</button>
-     <button class="Bton2">2</button>
-     <button class="Bton3">3</button>
-     <button class="Bton4">4</button>
-     <button class="Bton5">5</button>
-    </div>
-    <div id="sidebar_right">
-     <button class="Btona">1</button>
-     <button class="Btonb">2</button>
-     <button class="Btonc">3</button>
-     <button class="Btond">4</button>
-     <button class="Btone">5</button>
-     <button class="Btonf">6</button>
-     <button class="Btong">7</button>
-     <button class="Btonh">8</button>
-     <button class="Btoni">9</button>
-     <button class="Btonj">0</button>
-     <button class="Btonk">00</button>
-     <button class="Btonl">.</button>
-     <button class="checkout">checkout</button>
-    </div>
-    <div id="content" style="text-align: center;">
-     <input type="image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRAAgdWeyaM5MfK4aUY4pBfQlmfRd5L-m156k9ta4_n_g6vnKEx&usqp=CAU" width="200" height="150">
-     <input type="image" src="https://b.ecimg.tw/items/DEAT17A40921338/000001_1518149878.jpg" width="200" height="150">
-     <input type="image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSFI6G5vton38vqiMn2ebpXDK7IvbIaZc5Yah5cNs4oRnO_qdap&usqp=CAU" width="200" height="150">
-      <table class="table" border="1" align="center">
-       <thead style="height: 50">
-        <td class="name">Product Name</td>
-        <td class="name">Quantity</td>
-        <td class="name">Price</td>
-        <td class="name">SmallTotal</td>
-       </thead>
-       <tr>
-         <td class="name">Toy</td>
-         <td class="quantity">
-           <input id="quantity1" value="1" onblur="total(1);">
-         </td>
-         <td class="price">
-           <input type="hidden" id="price1" value="100">100
-         </td>
-         <td class="total">
-           <span id="smallTotal1" class="smalltotal1">100</span>
-         </td>
-       </tr>
-       <tr>
-         <td class="name">Printing</td>
-         <td class="quantity">
-           <input id="quantity2" value="1" onblur="total(2);">
-         </td>
-         <td class="price">
-           <input type="hidden" id="price2" value="200">200
-         </td>
-         <td class="total">
-           <span id="smallTotal2" class="smalltotal2">200</span>
-         </td>
-       </tr>
-       <tr>
-         <td class="name">Mug</td>
-         <td class="quantity">
-           <input id="quantity3" value="1" onblur="total(3);">
-         </td>
-         <td class="price">
-           <input type="hidden" id="price3" value="300">300
-         </td>
-         <td class="total">
-           <span id="smallTotal3" class="smalltotal3">300</span>
-         </td> 
-       </tr>
-       <tr>
-         <td colspan="3" class="cart_total"></td>
-         <td>
-           <span class="red">Total:<span class="red" id="total">Dollar
-         </td>
-       </tr>
-      </table>
-    </div>
-    <div class="line"></div>
-   <div id="footer"></div>
+</div>
+<span onclick="openNav()">&#9826;</span>
+<div class="line"></div>
+<div>
+ <button class="Bton1" herf="#" >Coffee</button>
+ <button class="Bton2" herf="#" >Dessert</button>
+ <button class="Bton3" herf="#" >Main meal</button>
+ <button class="Bton4" herf="#" >Report</button>
+</div>
+<script src="./index.js" type="text/javascript"></script>
 </body>
-</html>
+</html> 
