--- a/final/menu/que.html
+++ b/final/menu/que.html
@@ -50,4 +50,5 @@
    </p>
    <input class="com" type="submit" onclick="alert('THANKS!')" value="Complete">
   </div>
+  <input class="back" type ="button" onclick="history.back()" value="BACK"></input>
 </body>
