--- a/final/menu/a.html
+++ b/final/menu/a.html
@@ -26,7 +26,7 @@
  </form>
    <label for="lname" class="ccc">Email :</label><p>
    <input type="text" id="lname" name="lname"placeholder="Doe@gmail.com"><p>
-   <button href="#" class="enter">Enter</button>
+   <button href="https://chia-yun-chang.github.io/wp108b/final/menu/que.html" class="enter">Enter</button>
 </div>
 </form> 
 </body>
