--- a/final/menu/a.html
+++ b/final/menu/a.html
@@ -28,6 +28,7 @@
    <input type="text" id="lname" name="lname"placeholder="Doe@gmail.com"><p>
    <input class="enter" type="button" value="Enter" onclick="location.href='https://chia-yun-chang.github.io/wp108b/final/menu/que.html';">
 </div>
+<input class="back" type ="button" onclick="history.back()" value="BACK"></input>
 </form> 
 </body>
 </html>
