--- a/final/survey/data.html
+++ b/final/survey/data.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="a.css" rel="stylesheet" type ="text/css">
+  <link href="data.css" rel="stylesheet" type ="text/css">
 </head>
 <body>
  <h2>Please enter your data.</h2>
- <div class="aaa">
+ <div class="frame">
  <form>
-   <label for="fname" class="bbb">Username :</label><p>
+   <label for="fname" class="bbb">Name :</label><p>
    <input type="text" id="fname" name="fname" placeholder="John">
    <p>Gender :</p>
     <form>
@@ -25,8 +25,8 @@
      <input type="date" id="bookdate" placeholder="2020-04-14">
    </form>
      <label for="lname" class="ccc">Email :</label><p>
-     <input type="text" id="lname" name="lname"placeholder="Doe@gmail.com"><p>
-     <input class="enter" type="button" value="Enter" onclick="location.href='https://chia-yun-chang.github.io/wp108b/final/menu/que.html';">
+     <input type="text" id="lname" name="lname"placeholder="Abc@gmail.com"><p>
+     <input class="enter" type="button" value="Enter" onclick="location.href='https://chia-yun-chang.github.io/wp108b/final/survey/que.html';">
  </form> 
  </div>
 <input class="back" type ="button" onclick="history.back()" value="BACK"></input>
