--- a/final/survey/que.html
+++ b/final/survey/que.html
@@ -10,7 +10,7 @@
   <div class="line"></div>
   <p>Please rate your satisfaction with...</p>
   <p>( The higher the number, the higher the score. )</p>
-  <div class="a">
+  <div class="frame">
    <p>
    <p>The accuracy of your order.
     <select>
