--- a/0/aaa.html
+++ b/0/aaa.html
@@ -84,6 +84,16 @@
       </table>
     </div>
     <div class="line"></div>
-   <div id="footer"></div>
+   <div id="footer">
+    <div class="txtb">
+      <input type="text">
+      <span data-placeholder="Username"></span>
+    </div>
+
+    <div class="txtb">
+      <input type="password">
+      <span data-placeholder="Password"></span>
+    </div>
+   </div>
 </body>
 </html>
