--- a/final/index.html
+++ b/final/index.html
@@ -10,12 +10,12 @@
 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 <a href="https://chia-yun-chang.github.io/wp108b/1/hw.html" style="float: left;">About</a> 
 <a href="#" style="float: left;">Instructions</a> 
-<a href="https://chia-yun-chang.github.io/wp108b/final/menu/a.html" style="float: left;">Survey</a> 
+<a href="https://chia-yun-chang.github.io/wp108b/final/survey/data.html" style="float: left;">Survey</a> 
 </div>
 <div class="dropdown" style="float:right">
 <button onclick="myFunction()" class="dropbtn">Leave</button>
     <div id="myDropdown" class="dropdown-content">
-    <a href="#">Log in</a>
+    <a href="https://chia-yun-chang.github.io/wp108b/final/login/login.html">Log in</a>
     <a href="#">Log out</a>
     </div>
 </div>
