--- a/final/login/login.html
+++ b/final/login/login.html
@@ -20,7 +20,7 @@
        <a href="#">Sign up</a>
       </div>
     </form>
-
+    <input class="back" type ="button" onclick="history.back()" value="BACK"></input>
     <script type="text/javascript">
     $(".txtb input").on("focus",function(){
       $(this).addClass("focus");});
