--- a/final/login/login.html
+++ b/final/login/login.html
@@ -8,12 +8,10 @@
     <form action="index.html" class="login-form">
       <h1>Login</h1>
       <div class="txtb">
-        <input type="text">
-        <span data-placeholder="Username"></span>
+        <input type="text" id="date" placeholder="Username">
       </div>
       <div class="txtb">
-        <input type="password">
-        <span data-placeholder="Password"></span>
+        <input type="password" id="date" placeholder="Password">
       </div>
       <input type="submit" class="logbtn" value="Login">
       <div class="bottom-text">Don't have account? 
@@ -21,12 +19,12 @@
       </div>
     </form>
     <input class="back" type ="button" onclick="history.back()" value="BACK"></input>
-    <script type="text/javascript">
+  <script type="text/javascript">
     $(".txtb input").on("focus",function(){
       $(this).addClass("focus");});
 
     $(".txtb input").on("blur",function(){
-      if($(this).val() == "")
+      if($(this).val() === "")
       $(this).removeClass("focus");});
-    </script>
+  </script>
 </body>
