--- a/final/index.html
+++ b/final/index.html
@@ -22,10 +22,8 @@
 <span onclick="openNav()">&#9826;</span>
 <div class="line"></div>
 <div>
- <button class="Bton1" herf="#" >Coffee</button>
- <button class="Bton2" herf="#" >Dessert</button>
- <button class="Bton3" herf="#" >Main meal</button>
- <button class="Bton4" herf="#" >Report</button>
+ <button class="Bton1" herf="https://chia-yun-chang.github.io/wp108b/final/coffee/cofe.html" >Coffee</button>
+ <button class="Bton2" herf="#" >Report</button>
 </div>
 <script src="./index.js" type="text/javascript"></script>
 </body>
