--- a/final/coffee/cofe.html
+++ b/final/coffee/cofe.html
@@ -6,49 +6,75 @@
   <link href="cofe.css" rel="stylesheet" type ="text/css">
 </head>
 <body>
+<h1>---COFFEE---</h1><br>
 <script src="./cofe.js" type="text/javascript"></script>
 <table class="table">
+  <table class="table" border="1" align="center">
     <thead style="height: 50">
-     <td class="name">Product Name</td>
+     <td class="name">Commodity</td>
      <td class="name">Quantity</td>
      <td class="name">Price</td>
      <td class="name">SmallTotal</td>
     </thead>
     <tr>
-      <td class="name">Toy</td>
+      <td class="name">espresso</td>
       <td class="quantity">
-        <input id="quantity1" value="1" onblur="total(1);">
+        <input id="quantity1" value="0" onblur="total(1);">
       </td>
       <td class="price">
-        <input type="hidden" id="price1" value="100">100
+        <input type="hidden" id="price1" value="50">50
       </td>
       <td class="total">
-        <span id="smallTotal1" class="smalltotal">100</span>
+        <span id="smallTotal1" class="smalltotal">0</span>
       </td>
     </tr>
     <tr>
-      <td class="name">Printing</td>
+      <td class="name">caffè Americano</td>
       <td class="quantity">
-        <input id="quantity2" value="1" onblur="total(2);">
+        <input id="quantity2" value="0" onblur="total(2);">
       </td>
       <td class="price">
-        <input type="hidden" id="price2" value="200">200
+        <input type="hidden" id="price2" value="60">60
       </td>
       <td class="total">
-        <span id="smallTotal2" class="smalltotal">200</span>
+        <span id="smallTotal2" class="smalltotal">0</span>
       </td>
     </tr>
     <tr>
-      <td class="name">Mug</td>
+      <td class="name">caffè latte</td>
       <td class="quantity">
-        <input id="quantity3" value="1" onblur="total(3);">
+        <input id="quantity3" value="0" onblur="total(3);">
       </td>
       <td class="price">
-        <input type="hidden" id="price3" value="300">300
+        <input type="hidden" id="price3" value="70">70
       </td>
       <td class="total">
-        <span id="smallTotal3" class="smalltotal">300</span>
+        <span id="smallTotal3" class="smalltotal">0</span>
       </td> 
+    </tr>
+    <tr>
+      <td class="name">cappuccino</td>
+      <td class="quantity">
+        <input id="quantity4" value="0" onblur="total(4);">
+      </td>
+      <td class="price">
+        <input type="hidden" id="price4" value="80">80
+      </td>
+      <td class="total">
+        <span id="smallTotal4" class="smalltotal">0</span>
+      </td>
+    </tr>
+    <tr>
+      <td class="name">mocha</td>
+      <td class="quantity">
+        <input id="quantity5" value="0" onblur="total(5);">
+      </td>
+      <td class="price">
+        <input type="hidden" id="price5" value="80">90
+      </td>
+      <td class="total">
+        <span id="smallTotal5" class="smalltotal">0</span>
+      </td>
     </tr>
     <tr>
       <td colspan="3" class="cart_total"></td>
@@ -56,6 +82,7 @@
         <span class="red">Total:<span class="red" id="total">Dollar
       </td>
     </tr>
-   </table>
+</table>
+<button class="Bton" herf="#" >Checkout</button>
    </body>
    </html>
