--- a/final/index.html
+++ b/final/index.html
@@ -21,10 +21,8 @@
 </div>
 <span onclick="openNav()">&#9826;</span>
 <div class="line"></div>
-<div>
- <button class="Bton1" herf="https://chia-yun-chang.github.io/wp108b/final/coffee/cofe.html" >Coffee</button>
- <button class="Bton2" herf="#" >Report</button>
-</div>
+  <input class="Bton1" type="button" value="Coffee" onclick="javascripute.location.href='https://chia-yun-chang.github.io/wp108b/final/coffee/cofe.html';"></input>
+  <input class="Bton2" type="button" value="Report" onclick="location.href='https://chia-yun-chang.github.io/wp108b/final/coffee/cofe.html';"></input>
 <script src="./index.js" type="text/javascript"></script>
 </body>
 </html> 
