--- a/final/survey/data.html
+++ b/final/survey/data.html
@@ -26,7 +26,7 @@
    </form>
      <label for="lname" class="ccc">Email :</label><p>
      <input type="text" id="lname" name="lname"placeholder="Abc@gmail.com"><p>
-     <input class="enter" type="button" value="Enter" onclick="location.href='https://chia-yun-chang.github.io/wp108b/final/survey/que.html';">
+     <input class="enter" type="button" value="Enter" onclick="location.href='https://chia-yun-chang.github.io/wp108b/final/survey/que.html';"></input>
  </form> 
  </div>
 <input class="back" type ="button" onclick="history.back()" value="BACK"></input>
