--- a/final/index.html
+++ b/final/index.html
@@ -6,23 +6,23 @@
   <link href="index.css" rel="stylesheet" type ="text/css">
 </head>
 <body>
-<div id="mySidenav" class="sidenav">
-<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-<a href="https://chia-yun-chang.github.io/wp108b/1/hw.html" style="float: left;">About</a> 
-<a href="#" style="float: left;">Instructions</a> 
-<a href="https://chia-yun-chang.github.io/wp108b/final/survey/data.html" style="float: left;">Survey</a> 
-</div>
-<div class="dropdown" style="float:right">
-<button onclick="myFunction()" class="dropbtn">Leave</button>
+ <div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="https://chia-yun-chang.github.io/wp108b/1/hw.html" style="float: left;">About</a> 
+  <a href="#" style="float: left;">Instructions</a> 
+  <a href="https://chia-yun-chang.github.io/wp108b/final/survey/data.html" style="float: left;">Survey</a> 
+ </div>
+ <div class="dropdown" style="float:right">
+  <button onclick="myFunction()" class="dropbtn">Leave</button>
     <div id="myDropdown" class="dropdown-content">
-    <a href="https://chia-yun-chang.github.io/wp108b/final/login/login.html">Log in</a>
-    <a href="#">Log out</a>
+     <a href="https://chia-yun-chang.github.io/wp108b/final/login/login.html">Log in</a>
+     <a href="#">Log out</a>
     </div>
-</div>
-<span onclick="openNav()">&#9826;</span>
-<div class="line"></div>
-  <input class="Bton1" type="button" value="Coffee" onclick="javascripute.location.href='https://chia-yun-chang.github.io/wp108b/final/coffee/cofe.html';"></input>
-  <input class="Bton2" type="button" value="Report" onclick="location.href='https://chia-yun-chang.github.io/wp108b/final/coffee/cofe.html';"></input>
+ </div>
+ <span onclick="openNav()">&#9826;</span>
+ <div class="line"></div>
+ <input class="Bton1" type="button" value="Coffee" onclick="location.href='https://chia-yun-chang.github.io/wp108b/final/coffee/cofe.html';"></input>
+ <input class="Bton2" type="button" value="Report" onclick="location.href='https://chia-yun-chang.github.io/wp108b/final/coffee/cofe.html';"></input>
 <script src="./index.js" type="text/javascript"></script>
 </body>
 </html> 
