--- a/final/index.html
+++ b/final/index.html
@@ -21,8 +21,10 @@
  </div>
  <span onclick="openNav()">&#9826;</span>
  <div class="line"></div>
- <input class="Bton1" type="button" value="Coffee" onclick="location.href='https://chia-yun-chang.github.io/wp108b/final/coffee/cofe.html';"></input>
- <input class="Bton2" type="button" value="Report" onclick="location.href='https://chia-yun-chang.github.io/wp108b/final/coffee/cofe.html';"></input>
-<script src="./index.js" type="text/javascript"></script>
+ <div>
+ <a href="https://chia-yun-chang.github.io/wp108b/final/coffee/cofe.html" class="Bton1">Coffee</a>
+ <a href="https://chia-yun-chang.github.io/wp108b/final/coffee/cofe.html" class="Bton2">Report</a>
+</div>
+ <script src="./index.js" type="text/javascript"></script>
 </body>
 </html> 
