--- a/final note/HW1/Hw1.html
+++ b/final note/HW1/Hw1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="hw.css" rel="stylesheet" type ="text/css">
+  <link href="Hw1.css" rel="stylesheet" type ="text/css">
 </head>
 <body>
 <img src="https://media-exp1.licdn.com/dms/image/C4E1BAQGNHAbH2lBeNw/company-background_10000/0?e=2159024400&v=beta&t=pCkWfQWoYOtrPSD6TQizWD1sx9oz43a8YV7dxjGo83s" width="450" height="125">
@@ -26,6 +26,6 @@
 <address>
  <p class="Add">Some people are worth melting for.</p>
 </address>
-<input type ="button" onclick="history.back()" value="BACK"></input>
+<input type ="button" onclick="history.back()" value="BACK">
 </body>
 </html>
