--- a/final/index.html
+++ b/final/index.html
@@ -23,7 +23,7 @@
  <div class="line"></div>
  <div>
  <a href="https://chia-yun-chang.github.io/wp108b/final/coffee/cofe.html" class="Bton1">Coffee</a>
- <a href="https://chia-yun-chang.github.io/wp108b/final/coffee/cofe.html" class="Bton2">Report</a>
+ <a href="#" class="Bton2">Report</a>
 </div>
  <script src="./index.js" type="text/javascript"></script>
 </body>
